--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Julius Koenig", email = "julius.koenig@kds-kg.de"},
 ]
-dependencies = []
+dependencies = ["requests>=2.32.3", "wiederverwendbar>=0.7.0"]
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "GPL-3.0"}
